added logo preview

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes:wght@400;600&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <title>Mel's Cut 'n' Braids</title>
+  <!-- Open Graph / Facebook -->
+<meta property="og:title" content="Mel’s Cut 'n' Braids">
+<meta property="og:description" content="Where Style Meets Perfection – Book a glam session today!">
+<meta property="og:image" content="https://missrobert05.github.io/MelSalonWebsite/images/logo-preview.jpg">
+<meta property="og:url" content="https://missrobert05.github.io/MelSalonWebsite/">
+<meta property="og:type" content="website">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Mel’s Cut 'n' Braids">
+<meta name="twitter:description" content="Where Style Meets Perfection – Book a glam session today!">
+<meta name="twitter:image" content="https://missrobert05.github.io/MelSalonWebsite/images/logo-preview.jpg">
+
   <style>
     .fab-container {
   position: fixed;
