--- a/index.html
+++ b/index.html
@@ -399,6 +399,8 @@ footer p {
       <li><a href="#testimonials">Testimonials</a></li>
       <li><a href="#booking">Booking</a></li>
       <li><a href="#about">About Us</a></li>
+      <li><a href="#founder">Meet Our Founder</a></li>
+    <li><a href="#giftcard">Giftcard</a></li>
     </ul>
   </nav>
 
